Fixed "mouse double click collision."

This patch fixes the 'add point' collision:
  - removed 'add point' double click action
  - added a new AssociationWidget context menu entry named 'Add Point'
  - moved out associaton related context menu setup into
    ListPopupMenu::setupAssocationItem()
  - use upper case context menu entry text for add/delete point

BUG:321255
GUI